# it276-2d-game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
images/blood/bloodsplats/: README
images/muzzle/: README.md
images/player/top-down-survivor/: .README.swp  README
include/: gf2d_graphics.h  gf2d_sprite.h  gf2d_vector.h  simple_logger.h
src/: gf2d_graphics.c  gf2d_sprite.c  gf2d_vector.c  simple_logger.c
src/game/: game.c  game.h  kennynl.h
src/game/collision/: bbox.c  bbox.h  point.c  point.h  raytrace.c  raytrace.h
src/game/entity/: entity.c  entity.h  manager.c  manager.h
src/game/entity/definitions/: background.c  background.h  bloodsplat.c  bloodsplat.h  bug.c  bug.h  cursor.c  cursor.h  door.c  door.h  egg.c  egg.h  equiptment.c  equiptment.h  glowstick.c  glowstick.h  healthbar.c  healthbar.h  pickup.c  pickup.h  player.c  player.h  plop.c  plop.h  throwing.c  throwing.h  world.c  world.h  youdied.c  youdied.h
src/game/graphics/: animation.c  animation.h
src/game/sound/: orchestra.c  orchestra.h
src/game/states/: manager.c  manager.h  world.c  world.h
src/game/states/save/: em.c  em.h  player.c  player.h  save.h  world.c  world.h
